--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
     display: block;
     width: 100%;
   }
+  .blocksDetailcontainer{
+    height: 1000;
+    width: 1000;
+    overflow-y: scroll;
+    background: orange;
+    content: "CA CEST MON TEXT";
+  }
+  .oneDetail {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .oneDetail:hover {
+  background-color: #ccc; 
+}
+
+.detailTransaction {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
 </style>
 
 </html>
