--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     background: orange;
     content: "CA CEST MON TEXT";
   }
-  .oneDetail {
+  .oneDetailT {
   background-color: #eee;
   color: #444;
   cursor: pointer;
@@ -83,11 +83,35 @@
   transition: 0.4s;
 }
 
-.active, .oneDetail:hover {
+.active, .oneDetailT:hover {
+  background-color: #ccc; 
+}
+
+.oneDetailI {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .oneDetailI:hover {
   background-color: #ccc; 
 }
 
 .detailTransaction {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
+.detailInstruction {
   padding: 0 18px;
   display: none;
   background-color: white;
