--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
   overflow: hidden;
 }
 
+.searchInstance {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
 </style>
 
 </html>
