--- a/index.html
+++ b/index.html
@@ -2,135 +2,20 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <script src="dist/bundle.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <script src="dist/bundle.min.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <h1>Columbus</h1>
-  
-  <div id="buttons">
-    <button id="browse">Browse with ID</button><br>
-    <input type="text" id="contractID" value="cab579cd7b9241526c85d075411ee3123d3a36560ef88a367a340cc587e6ebb4" /><br>
-  </div>
-
-  <div class='blocksContainer'>
-    <svg class='blocks'></svg>
-  </div>
+    <h1>Columbus</h1>
+    <div class='blocksContainer'>
+        <svg class='blocks'></svg>
+    </div>
 
 </body>
 <script>
-  jsapp.sayHi();
+    jsapp.sayHi();
 </script>
-<style>
-  div#container {
-    height: 500;
-    width: 1500;
-    border: 5px solid #000;
-    overflow: scroll;
-  }
-
-  #myProgress {
-    width: 1500;
-    background-color: #ddd;
-
-  }
-
-  #myBar {
-    width: 1%;
-    height: 30px;
-    background-color: #4CAF50;
-
-  }
-
-  #barText {
-    width: 1500;
-    height: 30px;
-    text-align: center;
-    color: black;
-
-  }
-
-  .blocksContainer {
-    height: 350px;
-    /* TODO adjust automatically (function of page size) */
-    border: 0px solid #000;
-    /*overflow-y: hidden;
-    overflow-x: scroll;*/
-  }
-
-  .blocks {
-    display: block;
-    width: 100%;
-  }
-  .blocksDetailcontainer{
-    height: 1000;
-    width: 1000;
-    overflow-y: scroll;
-    background: orange;
-    content: "CA CEST MON TEXT";
-  }
-  .oneDetailT {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-.active, .oneDetailT:hover {
-  background-color: #ccc; 
-}
-
-.oneDetailI {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-.active, .oneDetailI:hover {
-  background-color: #ccc; 
-}
-
-.detailTransaction {
-  padding: 0 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-}
-
-.detailInstruction {
-  padding: 0 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-}
-
-.searchInstance {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-</style>
 
 </html>
