--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!-- index.html -->
 <html>
-
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
     <script src="dist/bundle.min.js" type="text/javascript"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Columbus</h1>
-    <div class='blocksContainer'>
-        <svg class='blocks'></svg>
+    <div class="blocksContainer">
+      <svg class="blocks"></svg>
     </div>
-
-</body>
-<script>
+  </body>
+  <script>
     jsapp.sayHi();
-</script>
-
+  </script>
 </html>
