Add two containers next to each other and browsecontainer opacity 0 before browsing

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!-- index.html -->
 <html>
-  <head>
+
+<head>
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <script src="dist/bundle.min.js" type="text/javascript"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Columbus</h1>
     <div class="blocksContainer">
-      <svg class="blocks"></svg>
+        <svg class="blocks"></svg>
     </div>
-  </body>
-  <script>
+    <div class="block-infos">
+        <div class="blockDetailcontainer">
+        </div>
+        <div class="container">
+        </div>
+    </div>
+</body>
+<script>
     jsapp.sayHi();
-  </script>
+</script>
+
 </html>
