Adds uikit css framework
Refactors the way css is embeded into the app. Now webpack is configured to build the css file and place it in dist/main.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- index.html -->
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="dist/main.css" />
     <meta charset="UTF-8" />
     <script src="dist/bundle.min.js" type="text/javascript"></script>
   </head>
