add new commands in readme and fix my name ;)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       style="height: 32px; display: block;"
     >
       <span style="padding-left: 1rem;"
-        >© DEDIS 2018 - by Anthony Iozza and Julien von Felten</span
+        >© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span
       >
       <span style="padding-left: 1rem;"> v.1.0.11</span>
       <a href="https://github.com/dedis/columbus-united">github repository</a>
