Try to debug accordion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Columbus</h1>
+    <h1 class="uk-text-center uk-heading-divider">Columbus</h1>
     <div class="blocksContainer">
         <svg class="blocks"></svg>
     </div>
