--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1 class="uk-text-center uk-heading-divider">Columbus</h1>
+    <h1 class="uk-text-center">Columbus</h1>
     <div class="blocksContainer">
       <svg class="blocks"></svg>
     </div>
