respect css naming convention

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Columbus</h1>
-    <div class="blocksContainer">
+    <div class="blocks-container">
       <svg class="blocks"></svg>
     </div>
     <div class="block-infos">
