--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div uk-dropdown class="description">
         The project Columbus is a project aiming to facilitate the visualization
         of the blockchain of ByzCoin. <br />
-        You can navigate throw the different blocks by going right or left. Then
+        You can navigate through the different blocks by going right or left. Then
         you can have more details about one block by clicking on the wanted
         block and selecting a transaction. You will see all instructions with
-        their type (spawn, invoke or delete) of each instrucions. <br />
+        their type (spawn, invoke or delete) of each instructions. <br />
         A button is there to browse the whole blockchain in order to find the
-        evolution of this instance throu the blockchain. The evolution will be
-        displayed on the right bottom.
+        evolution of this instance through the blockchain. The evolution will be
+        displayed on the bottom right.
       </div>
     </div>
     <div class="blocks-container">
