Correct description of the project

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div uk-dropdown class="description">
         The project Columbus is a project aiming to facilitate the visualization
         of the blockchain of ByzCoin. <br />
-        You can navigate through the different blocks by going right or left.
-        Then you can have more details about one block by clicking on the wanted
-        block and selecting a transaction. You will see all instructions with
-        their type (spawn, invoke or delete) of each instructions. <br />
+        You can navigate through the different blocks by dragging right or left.
+        You can have more details about one block by clicking on it and select a
+        transaction. You will see all instructions with their respective type
+        (spawn, invoke or delete) of each instruction. <br />
         A button is there to browse the whole blockchain in order to find the
-        evolution of this instance through the blockchain. The evolution will be
-        displayed on the bottom right.
+        evolution of this instance throughout the blockchain. The evolution will
+        be displayed on the bottom right.
       </div>
     </div>
     <div class="blocks-container">
