--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!-- index.html -->
 <html>
-  <head>
-    <link rel="stylesheet" href="dist/main.css" />
-    <meta charset="UTF-8" />
-    <script src="dist/bundle.min.js" type="text/javascript"></script>
-  </head>
+    <head>
+        <link rel="stylesheet" href="dist/main.css" />
+        <meta charset="UTF-8" />
+        <script src="dist/bundle.min.js" type="text/javascript"></script>
+    </head>
 
-  <body>
-    <div class="header">
-      <h1>Columbus</h1>
-      <button class="uk-button uk-button-default" type="button">
-        About
-      </button>
-      <div uk-dropdown class="description">
-        The project Columbus is a project aiming to facilitate the visualization
-        of the blockchain of ByzCoin. <br />
-        You can navigate through the different blocks by dragging right or left.
-        You can have more details about one block by clicking on it and select a
-        transaction. You will see all instructions with their respective type
-        (spawn, invoke or delete) of each instruction. <br />
-        A button is there to browse the whole blockchain in order to find the
-        evolution of this instance throughout the blockchain. The evolution will
-        be displayed on the bottom right.
-      </div>
-      <!--<div id="status-info">
+    <body>
+        <div class="header">
+            <h1>Columbus</h1>
+            <button class="uk-button uk-button-default" type="button">
+                About
+            </button>
+            <div uk-dropdown class="description">
+                The project Columbus is a project aiming to facilitate the
+                visualization of the blockchain of ByzCoin. <br />
+                You can navigate through the different blocks by dragging right
+                or left. You can have more details about one block by clicking
+                on it and select a transaction. You will see all instructions
+                with their respective type (spawn, invoke or delete) of each
+                instruction. <br />
+                A button is there to browse the whole blockchain in order to
+                find the evolution of this instance throughout the blockchain.
+                The evolution will be displayed on the bottom right.
+            </div>
+            <!--<div id="status-info">
 
         <div class="info">
           <div class="loader-wrapper">
@@ -34,27 +35,29 @@
           <div class="info-message">This is a message</div>
         </div>
       </div>-->
-    </div>
-    <div class="blocks-container">
-      <svg id="svg-container"></svg>
-    </div>
-    <div class="block-infos">
-      <div class="block-detail-container"></div>
-      <div class="browse-container"></div>
-    </div>
+        </div>
+        <div class="blocks-container">
+            <svg id="svg-container"></svg>
+        </div>
+        <div class="block-infos">
+            <div class="block-detail-container"></div>
+            <div class="browse-container"></div>
+        </div>
 
-    <footer
-      class="v-footer v-footer--fixed theme--light"
-      style="height: 32px; display: block;"
-    >
-      <span style="padding-left: 1rem;"
-        >© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span
-      >
-      <span style="padding-left: 1rem;"> v.1.0.11</span>
-      <a href="https://github.com/dedis/columbus-united">github repository</a>
-    </footer>
-  </body>
-  <script>
-    jsapp.sayHi();
-  </script>
+        <footer
+            class="v-footer v-footer--fixed theme--light"
+            style="height: 32px; display: block;"
+        >
+            <span style="padding-left: 1rem;"
+                >© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span
+            >
+            <span style="padding-left: 1rem;"> v.1.0.11</span>
+            <a href="https://github.com/dedis/columbus-united"
+                >github repository</a
+            >
+        </footer>
+    </body>
+    <script>
+        jsapp.sayHi();
+    </script>
 </html>
