--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- index.html -->
 <html>
     <head>
-        <link rel="stylesheet" href="dist/main.css" />
         <meta charset="UTF-8" />
         <script src="dist/bundle.min.js" type="text/javascript"></script>
     </head>
@@ -24,17 +23,19 @@
                 find the evolution of this instance throughout the blockchain.
                 The evolution will be displayed on the bottom right.
             </div>
-            <!--<div id="status-info">
-
-        <div class="info">
-          <div class="loader-wrapper">
-            <svg class="spinner" viewBox="0 0 50 50">
-              <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-            </svg>
-          </div>
-          <div class="info-message">This is a message</div>
+        <div id="status-info">
+            <!--<div class="info">
+            <div class="loader-wrapper">
+                <svg class="spinner" viewBox="0 0 50 50">
+                <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+                </svg>
+            </div>
+            <div class="info-message">This is a message</div>
+            </div>-->
+            <div class="info">
+                <div class="info-message">blocks loaded: <span id="loaded-blocks"></span></div>
+            </div>
         </div>
-      </div>-->
         </div>
         <div class="blocks-container">
             <svg id="svg-container"></svg>
@@ -44,17 +45,10 @@
             <div class="browse-container"></div>
         </div>
 
-        <footer
-            class="v-footer v-footer--fixed theme--light"
-            style="height: 32px; display: block;"
-        >
-            <span style="padding-left: 1rem;"
-                >© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span
-            >
-            <span style="padding-left: 1rem;"> v.1.0.11</span>
-            <a href="https://github.com/dedis/columbus-united"
-                >github repository</a
-            >
+        <footer>
+            <span>© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span>
+            <span> v.1.0.11</span>
+            <a href="https://github.com/dedis/columbus-united">github repository</a>
         </footer>
     </body>
     <script>
