Applies prettier + tslint

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 find the evolution of this instance throughout the blockchain.
                 The evolution will be displayed on the bottom right.
             </div>
-        <div id="status-info">
-            <!--<div class="info">
+            <div id="status-info">
+                <!--<div class="info">
             <div class="loader-wrapper">
                 <svg class="spinner" viewBox="0 0 50 50">
                 <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
@@ -32,10 +32,12 @@
             </div>
             <div class="info-message">This is a message</div>
             </div>-->
-            <div class="info">
-                <div class="info-message">blocks loaded: <span id="loaded-blocks"></span></div>
+                <div class="info">
+                    <div class="info-message">
+                        blocks loaded: <span id="loaded-blocks"></span>
+                    </div>
+                </div>
             </div>
-        </div>
         </div>
         <div class="blocks-container">
             <svg id="svg-container"></svg>
@@ -48,7 +50,9 @@
         <footer>
             <span>© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span>
             <span> v.1.0.11</span>
-            <a href="https://github.com/dedis/columbus-united">github repository</a>
+            <a href="https://github.com/dedis/columbus-united"
+                >github repository</a
+            >
         </footer>
     </body>
     <script>
