--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <script src="dist/bundle.min.js" type="text/javascript"></script>
+        <link rel="icon" href="icon.png" />
     </head>
 
     <body>
