diplay last added block

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
         <div class="blocks-container">
             <svg id="svg-container"></svg>
+            <svg id="last-container"></svg>
         </div>
         <div class="block-infos">
             <div class="block-detail-container"></div>
