--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!-- index.html -->
 <html>
+   
+
     <head>
         <meta charset="UTF-8" />
         <script src="dist/bundle.min.js" type="text/javascript"></script>
         <link rel="icon" href="icon.png" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -39,6 +42,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="searchbar-container">
+           <div class="topnav">
+                
+             <input type="text" placeholder=" Search by block / hash / transaction ">
+            </div>
+              
         </div>
         <div class="blocks-container">
             <svg id="svg-container"></svg>
