--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="dist/bundle.min.js" type="text/javascript"></script>
         <link rel="icon" href="icon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      
     </head>
 
     <body>
@@ -43,14 +44,17 @@
                 </div>
             </div>
         </div>
+
         <div class="searchbar-container">
            <div class="topnav">
              <input type="text" placeholder=" Search by block / hash / transaction ">
             </div>
         </div>
+
         <div class="blocks-container">
             <svg id="svg-container"></svg>
             <svg id="last-container"></svg>
+                <!--<span>Text goes here</span>-->
         </div>
         <div class="block-infos">
             <div class="block-detail-container"></div>
