--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             </div>
         </div>
 
-        <div class="searchbar-container">
+       <!-- <div class="searchbar-container">
            <div class="topnav">
              <input type="text" placeholder=" Search by block / hash / transaction ">
             </div>
-        </div>
+        </div>-->
 
         <div class="blocks-container">
             <svg id="svg-container"></svg>
