--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!-- index.html -->
 <html>
-   
-
     <head>
         <meta charset="UTF-8" />
         <script src="dist/bundle.min.js" type="text/javascript"></script>
         <link rel="icon" href="icon.png" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
     </head>
 
     <body>
@@ -16,7 +17,6 @@
                 About
             </button>
             <div uk-dropdown class="description">
-                
                 The project Columbus is a project aiming to facilitate the
                 visualization of the blockchain of ByzCoin. <br />
                 You can navigate through the different blocks by dragging right
@@ -45,8 +45,11 @@
             </div>
         </div>
         <div class="searchbar-container">
-           <div class="topnav">
-             <input type="text" placeholder=" Search by block / hash / transaction ">
+            <div class="topnav">
+                <input
+                    type="text"
+                    placeholder=" Search by block / hash / transaction "
+                />
             </div>
         </div>
         <div class="blocks-container">
