Moved the query results to the bottom of the screen
I had to refactor some old code, I have to polish the result (especially margins), after digging a bit in the querying, I might have identified some broken things and some inefficiencies

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             <div class="browse-container"></div>
         </div>
 
+        <div class= "query-answer">
+            Query-answer
+
+        </div>
+
         <footer>
             <span>© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span>
             <span> v.1.0.11</span>
