--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
             <div class="browse-container"></div>
         </div>
 
-        <div class= "query-answer">
-            Query-answer
-
-        </div>
+        <div class= "query-answer"></div>
 
         <footer>
             <span>© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span>
