--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <script src="uikit/dist/js/uikit-icons.min.js"></script>
         <script src="dist/bundle.min.js" type="text/javascript"></script>
+       
         <link rel="icon" href="icon.png" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
