implemented search by hash

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     placeholder=" Search by block / hash / transaction "
 
                 />
+                <input type="submit" value="Search" id="submit-button">
             </div>
         </div>
 
