--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="header">
        
-            <img src="assets/logo color small.png" alt="logo" />
+            <img src="assets/logo-color-small.png" alt="logo" />
             
 
             <button class="uk-button uk-button-default" type="button">
