Fixes the dev deploy

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!-- index.html  -->
+<!-- index.html -->
 <html>
     <head>
         <meta charset="UTF-8" />
     
-        <script src="dist/bundle.min.js" type="text/javascript"></script>
+        <script src="dist/bundle.min.js?v=12" type="text/javascript"></script>
      
         <link href='https://css.gg/css' rel='stylesheet'>
 
