Added highlighting to arrows (WIP), and improved the display for smaller screen

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
     <body>
         <div class="header">
-            <img src="assets/logo color small.png" alt="logo" />
-
+            <a href="http://127.0.0.1:5500/index.html">
+                <img src="assets/logo color small.png" alt="logo" />
+            </a>
             <button class="uk-button uk-button-default" type="button">
                 About
             </button>
