Somehow the image links were broken, so fixed again

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <body>
         <div class="header">
             <a href="https://wookiee.ch/columbus-dev/">
-                <img src="assets/logo color small.png" alt="logo" />
+                <img src="assets/logo-color-small.png" alt="logo" />
             </a>
+            
             <button class="uk-button uk-button-default" type="button">
                 About
             </button>
