Added automatized versioning

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="dist/bundle.min.js" type="text/javascript"></script>
+        <script src="dist/bundle.min.js?v=VERSIONNUMBER" type="text/javascript"></script>
         <link rel="icon" href="icon.png" />
     </head>
 
