Adds automatized versionning

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
     
-        <script src="dist/bundle.min.js?v=12" type="text/javascript"></script>
+        <script src="dist/bundle.min.js?v=VERSIONNUMBER" type="text/javascript"></script>
      
         <link href='https://css.gg/css' rel='stylesheet'>
 
