Added search by index

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="topnav">   <!-- onclick="getInputValue();" -->
                 <input
                     id = "search-input"
-                    type="text"
+                    type="search"
                     placeholder=" Search by block / hash / transaction "
 
                 />
