--- a/index.html
+++ b/index.html
@@ -63,7 +63,14 @@
                     type="input"
                     placeholder=" Search by block index or hash " 
                 />
-                <input type="submit" value="Search" id="submit-button">
+                <a uk-search-icon type="submit" id="submit-button"></a>
+                <select class="uk-select" id="search-mode">
+                    <option value="index">Search by block index</option>
+                    <option value="hash">Search by block hash</option>
+                    <option value="id">Search by instance ID</option>
+
+
+                </select>
             </div>
         </div>
 
