--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                     placeholder=" Search by block index, hash or instance"
                 />
                 <a uk-search-icon type="submit" id="submit-button"></a>
+                <select class="uk-select" id="search-mode">
+                    <option value="anything">Automatic search</option>
+                    <option value="index">Search by block index</option>
+                    <option value="hash">Search by block hash</option>
+                    <option value="id">Search by instance ID</option>
+                </select>
             </div>
         </div>
 
