--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
         <div class="query-answer"></div>
 
         <footer>
-            <span>© DEDIS 2018 - by Lucas Trognon, Sophia Artioli Anthony Iozzia and Julian von Felten</span>
+            <span
+                >© DEDIS 2018 - by Lucas Trognon, Sophia Artioli Anthony Iozzia
+                and Julian von Felten</span
+            >
             <span> v.1.0.11</span>
             <a href="https://github.com/dedis/columbus-united"
                 >github repository</a
