Columbus 1.0.0 (#49) (end of fall 2020 semester project)
This PR closes the fall 2020 semester project, by @sophiartl  and @LucasTrg .

* Added Blockies dependency

* merge

* Fixed a dispay bug related to the merge

* Squashed another bug that appeared after the merge

* merge

* fixed nav

* Reinstalled blockies and first implementation

The version I previously installed was not behaving correctly with the stack so I made the switch to a ts supported version, the algorithm is basically the same albeit the doc is somewhat less readable

* Added a field for block heights

* Prettified everything

* cketch of arrowdAdded sketch oof arrows

* Improved arrow display

* fix arrow  proportions

* start last block

* display from last block

* Changed last container side

* fixed arrows

* Adjust axis

* Add text

* Moved the query results to the bottom of the screen

I had to refactor some old code, I have to polish the result (especially margins), after digging a bit in the querying, I might have identified some broken things and some inefficiencies

* Minor improvement and polish to the query results display

* Moved the loading screen to the bottom of the screen and modernized the spinner

Searching is not interrupting the browsing anymore, I cleaned some things a bit but introduced some redundant css while trying to display things right. I will try fixing it ASAP

* Added stickers

* Updated JS client, polished the queries displaying

* started adding tooltips

* fixed last added block info

* removed stickers

* Production roster and initalBlock index fixed

* Various fixes and improvements in the way things are displayed

* Added a copy to clipboard feature

It should only be called after a user generated input to work with all (most ?) browsers

* Quick fix for the display of the blockies

* Quick fix for the display of the forward link details

* Clearing a query correctly unhighlights the b

--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
-<!-- index.html -->
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="dist/bundle.min.js?v=VERSIONNUMBER" type="text/javascript"></script>
+        <script
+            src="dist/bundle.min.js?v=VERSIONNUMBER"
+            type="text/javascript"
+        ></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+
+        <link href="https://css.gg/css" rel="stylesheet" />
+
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <style>
+            /* 1. You define the CSS class like this:  */
+
+            .custom__color path {
+                color: white;
+            }
+        </style>
         <link rel="icon" href="icon.png" />
     </head>
 
     <body>
         <div class="header">
-            <h1>Columbus</h1>
+            <a href="https://wookiee.ch/columbus/">
+                <img src="assets/logo-color-small.png" alt="logo" />
+            </a>
+
             <button class="uk-button uk-button-default" type="button">
                 About
             </button>
@@ -16,13 +36,14 @@
                 The project Columbus is a project aiming to facilitate the
                 visualization of the blockchain of ByzCoin. <br />
                 You can navigate through the different blocks by dragging right
-                or left. You can have more details about one block by clicking
-                on it and select a transaction. You will see all instructions
-                with their respective type (spawn, invoke or delete) of each
-                instruction. <br />
-                A button is there to browse the whole blockchain in order to
-                find the evolution of this instance throughout the blockchain.
-                The evolution will be displayed on the bottom right.
+                or left and by ajusting the zoom with scrollwheel. You can have
+                more details about one block by clicking on it. If you need to
+                use one of the hash value displayed in a tooltip, just click on
+                it to copy it to your clipboard.<br />
+                You can also select a transaction. You will see all instructions
+                with their respective type (spawn, invoke or delete). A button
+                is there to browse the whole blockchain in order to display the
+                evolution of an instance throughout the blockchain.
             </div>
             <div id="status-info">
                 <!--<div class="info">
@@ -40,16 +61,40 @@
                 </div>
             </div>
         </div>
+        <div class="searchbar-container">
+            <div class="topnav">
+                <input
+                    id="search-input"
+                    type="input"
+                    placeholder=" Search by block index, hash or instance"
+                />
+                <a uk-search-icon type="submit" id="submit-button"></a>
+                <select class="uk-select" id="search-mode">
+                    <option value="anything">Automatic search</option>
+                    <option value="index">Search by block index</option>
+                    <option value="hash">Search by block hash</option>
+                    <option value="id">Search by instance ID</option>
+                </select>
+            </div>
+        </div>
+
         <div class="blocks-container">
             <svg id="svg-container"></svg>
+
+            <svg id="last-container"></svg>
         </div>
         <div class="block-infos">
             <div class="block-detail-container"></div>
             <div class="browse-container"></div>
         </div>
 
+        <div class="query-answer"></div>
+
         <footer>
-            <span>© DEDIS 2018 - by Anthony Iozzia and Julien von Felten</span>
+            <span
+                >© DEDIS 2018 - by Lucas Trognon, Sophia Artioli Anthony Iozzia
+                and Julian von Felten</span
+            >
             <span> v.1.0.11</span>
             <a href="https://github.com/dedis/columbus-united"
                 >github repository</a
