--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 color: white;
             }
         </style>
+        <link rel="icon" href="icon.png" />
     </head>
 
     <body>
