Tutorial ready for first review

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button class="uk-button uk-button-primary" type="button" id="step1" >
                 Get Started
             </button>
-            <div uk-dropdown class="description">
+            <!--div uk-dropdown class="description">
                 The project Columbus is a project aiming to facilitate the
                 visualization of the blockchain of ByzCoin. <br />
                 You can navigate through the different blocks by dragging right
@@ -46,7 +46,7 @@
                 with their respective type (spawn, invoke or delete). A button
                 is there to browse the whole blockchain in order to display the
                 evolution of an instance throughout the blockchain.
-            </div>
+            </div-->
             <div id="status-info">
                 <!--<div class="info">
             <div class="loader-wrapper">
@@ -90,7 +90,7 @@
             <div class="browse-container" id="step6"></div>
         </div>
 
-        <div class="query-answer" id="step7"></div>
+        <div class="query-answer"></div>
 
         <footer>
             <span
