Updates intro.js loading
Intro.js was not bundled within the app, which works in local but not in production. This PR fixes the way intro.js is included using the correct npm package.
Note that it would be a good idea to store the `initIntro()` in a separate file.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
         <script src="https://d3js.org/d3.v4.min.js"></script>
 
         <link href="https://css.gg/css" rel="stylesheet" />
-        <link rel="stylesheet" href="node_modules/intro.js/minified/introjs.min.css">
-        <link href="node_modules/intro.js/themes/introjs-modern.css" rel="stylesheet">
+        <link
+            rel="stylesheet"
+            href="node_modules/intro.js/minified/introjs.min.css"
+        />
+        <link
+            href="node_modules/intro.js/themes/introjs-modern.css"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -22,7 +28,6 @@
             }
         </style>
         <link rel="icon" href="icon.png" />
-        
     </head>
 
     <body>
@@ -31,7 +36,11 @@
                 <img src="assets/logo-color-small.png" alt="logo" />
             </a>
 
-            <button class="uk-button uk-button-primary" type="button" id="step1" >
+            <button
+                class="uk-button uk-button-primary"
+                type="button"
+                id="step1"
+            >
                 Get Started
             </button>
             <!--div uk-dropdown class="description">
@@ -63,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="searchbar-container"> 
+        <div class="searchbar-container">
             <div class="topnav" id="step3">
                 <input
                     id="search-input"
@@ -95,15 +104,13 @@
         <footer>
             <span
                 >© DEDIS 2018 - by Lucas Trognon, Sophia Artioli Anthony Iozzia
-                and Julian von Felten</span>
+                and Julian von Felten</span
+            >
             <span> v.1.0.11</span>
             <a href="https://github.com/dedis/columbus-united"
                 >github repository</a
             >
         </footer>
-        
-        <script src="node_modules/intro.js/minified/intro.min.js"> </script>
-        <script src="introjs/tutorial.js"></script>
     </body>
     <script>
         jsapp.sayHi();
