adding in tutorial, land in middle of page block search, zoom-in-out button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
         </div>
 
         <div class="blocks-container">
-            <svg id="svg-container"></svg>
+            <div id="div-blocks-wrapper">
+                <svg id="svg-container"></svg>
+            </div>
 
             <svg id="last-container"></svg>
         </div>
