--- a/index.html
+++ b/index.html
@@ -57,12 +57,41 @@
                 </svg>
             </div>
             <div class="info-message">This is a message</div>
-            </div>-->
-                <div class="info">
-                    <div class="info-message">
-                        blocks loaded: <span id="loaded-blocks"></span>
+            </div>
+            // TODO: id="stepX" add to tutorial -->
+                <div style="text-align: center;position: relative;">
+                    <button
+                    class="uk-button uk-button-primary uk-button-small"
+                    uk-toggle="target: #select-roster"
+                    type="button"
+                    style="/*! margin: auto; */transform: translate(0,85%);"
+                    >   
+                    Roster
+                    </button>
+                    
+                    <!-- This is the modal -->
+                    <div id="select-roster" uk-modal>
+                        <div class="uk-modal-dialog">
+                            <button class="uk-modal-close-default" type="button" uk-close></button>
+                            <div class="uk-modal-header">
+                                <h3 class="uk-modal-title">Enter your Cothority Roster:</h3>
+                            </div>
+                            <div class="uk-modal-body">
+                                <textarea id="text-roster" rows="20" cols="50" placeholder="roster.toml"></textarea>
+                            </div>
+                            <div class="uk-modal-footer uk-text-right">
+                                <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
+                                <button class="uk-button uk-button-primary uk-modal-close" type="button" id="save-roster">Save</button>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="info">
+
+                        <div class="info-message" style="transform: translate(0,10%);">
+                            blocks loaded: <span id="loaded-blocks"></span>
+                        </div>
+                    </div>
+            </div>
             </div>
         </div>
         <div class="searchbar-container">
