roster style and loaded blocks adjustments

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="uk-modal-dialog">
                             <button class="uk-modal-close-default" type="button" uk-close></button>
                             <div class="uk-modal-header">
-                                <h3 class="uk-modal-title">Enter your Cothority Roster:</h3>
+                                <p class="uk-modal-title">Enter your Cothority Roster:</p>
                             </div>
                             <div class="uk-modal-body">
                                 <textarea id="text-roster" rows="20" cols="50" placeholder="roster.toml"></textarea>
