advances on status of nodes, and scrollbar (not complete)

--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
         </div>
 
         <div class="blocks-container">
-            <div id="div-blocks-wrapper">
-                <svg id="svg-container"></svg>
-            </div>
-
+            <svg id="svg-container"></svg>
             <svg id="last-container"></svg>
         </div>
+
+        <ul id="status" uk-accordion>
+        </ul>
+
         <div class="block-infos">
             <div class="block-detail-container" id="step5"></div>
             <div class="browse-container" id="step6"></div>
