fix and style changes in transaction details. Node's status table.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <ul id="status" uk-accordion>
         </ul>
 
-        <div class="block-infos">
+        <div id="block_infos" class="block-infos">
             <div class="block-detail-container" id="step5"></div>
             <div class="browse-container" id="step6"></div>
         </div>
