--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
         <footer>
             <span
-                >© DEDIS 2018 - by Lucas Trognon, Sophia Artioli Anthony Iozzia
+                >© DEDIS 2018 - by Rosa Jose Sara, Pilar Marxer, Lucas Trognon, Sophia Artioli Anthony Iozzia
                 and Julian von Felten</span
             >
             <span> v.1.0.11</span>
