--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div-->
             <div
                 id="status-info"
-                style="text-align: center; position: relative"
+                style="text-align: center; position: relative;"
             >
                 <!--<div class="info">
             <div class="loader-wrapper">
@@ -67,7 +67,7 @@
                     class="uk-button uk-button-primary uk-button-small"
                     uk-toggle="target: #select-roster"
                     type="button"
-                    style="transform: translate(0, 85%)"
+                    style="transform: translate(0, 85%);"
                 >
                     Roster
                 </button>
@@ -95,17 +95,13 @@
                         </div>
                         <div class="uk-modal-footer uk-text-right">
                             <button
-                                class="
-                                    uk-button uk-button-default uk-modal-close
-                                "
+                                class="uk-button uk-button-default uk-modal-close"
                                 type="button"
                             >
                                 Cancel
                             </button>
                             <button
-                                class="
-                                    uk-button uk-button-primary uk-modal-close
-                                "
+                                class="uk-button uk-button-primary uk-modal-close"
                                 type="button"
                                 id="save-roster"
                             >
@@ -117,7 +113,7 @@
                 <div class="info">
                     <div
                         class="info-message"
-                        style="transform: translate(0, 10%)"
+                        style="transform: translate(0, 10%);"
                     >
                         blocks loaded: <span id="loaded-blocks"></span>
                     </div>
@@ -157,7 +153,7 @@
 
         <footer>
             <span
-                >© DEDIS 2018 - by Lucas Trognon, Sophia Artioli Anthony Iozzia
+                >© DEDIS 2018 - by Rosa Jose Sara, Pilar Marxer, Lucas Trognon, Sophia Artioli Anthony Iozzia
                 and Julian von Felten</span
             >
             <span> v.1.0.11</span>
